--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,7 +43,7 @@
         <activity android:name=".PermissionDenied" />
         <activity
             android:name=".ViewFinder"
-            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar" />
+            android:theme="@style/AppTheme" />
 
         <activity android:name=".StartScreen"
             android:theme="@style/AppTheme.Launcher">
