Add kotlin to Grade script and convert PermissionDenied class from Java to Kotlin

--- a/TUM_Lens/app/build.gradle
+++ b/TUM_Lens/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 29
@@ -72,5 +73,10 @@ dependencies {
     // Build off of nightly TensorFlow Lite
     implementation('org.tensorflow:tensorflow-lite:2.2.0') { changing = true }
     implementation('org.tensorflow:tensorflow-lite-support:0.0.0-nightly') { changing = true }
+    implementation "androidx.core:core-ktx:+"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
+}
+repositories {
+    mavenCentral()
 }
