Convert CameraRoll and ImageUtils classes to Kotlin and refactor CameraRoll for improved readability

--- a/TUM_Lens/app/src/main/AndroidManifest.xml
+++ b/TUM_Lens/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         android:name="android.permission.INTERNET"
         android:required="true" />
     <uses-permission
-        android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:name="android.permission.READ_EXTERNAL_STORAGE"w
         android:required="true" />
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
