Add contents of Android object detection demo to kickstart detector implementation
https://github.com/tensorflow/examples/tree/master/lite/examples/object_detection/android

--- a/TUM_Lens/app/src/main/AndroidManifest.xml
+++ b/TUM_Lens/app/src/main/AndroidManifest.xml
@@ -50,6 +50,9 @@
             android:name=".ViewFinder"
             android:theme="@style/AppTheme" />
         <activity
+            android:name=".obj_detection.DetectorActivity"
+            android:theme="@style/AppTheme" />
+        <activity
             android:name=".StartScreen"
             android:theme="@style/AppTheme.Launcher">
             <intent-filter>
