clear ClassificationActivity and DetectionActivity from History Stack when the toggle button is used to switch between them as that's the expected behaviour of such toggle buttons => toggling doesn't build up history

--- a/TUM_Lens/app/src/main/AndroidManifest.xml
+++ b/TUM_Lens/app/src/main/AndroidManifest.xml
@@ -48,10 +48,12 @@
             android:theme="@style/AppTheme" />
         <activity
             android:name=".classification.ClassificationActivity"
-            android:theme="@style/AppTheme" />
+            android:theme="@style/AppTheme"
+            android:launchMode="singleTask" />
         <activity
             android:name=".detection.DetectionActivity"
-            android:theme="@style/AppTheme" />
+            android:theme="@style/AppTheme"
+            android:launchMode="singleTask" />
         <activity
             android:name=".StartScreenActivity"
             android:theme="@style/AppTheme.Launcher">
