--- a/TUM_Lens/app/src/main/AndroidManifest.xml
+++ b/TUM_Lens/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.maxjokel.lens">
     <!-- app can only be installed on devices that satisfy the following feature requirements -->
     <uses-feature
@@ -26,7 +27,8 @@
         android:required="true" />
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-        android:required="true" />
+        android:required="true"
+        tools:ignore="ScopedStorage" />
     <uses-permission
         android:name="android.permission.VIBRATE"
         android:required="true" />
@@ -34,6 +36,7 @@
     <application
         android:name=".helpers.App"
         android:allowBackup="true"
+        android:requestLegacyExternalStorage="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
