--- a/TUM_Lens/app/src/main/AndroidManifest.xml
+++ b/TUM_Lens/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:name="android.hardware.screen.portrait"
         android:required="true" /> <!-- https://stackoverflow.com/a/15718892 -->
     <!-- the app needs the following permissions -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission
         android:name="android.permission.CAMERA"
         android:required="true" />
