--- a/TUM_Lens/app/build.gradle
+++ b/TUM_Lens/app/build.gradle
@@ -31,7 +31,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation fileTree(dir: "libs", include: ["*.jar", "*.aar"])
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
@@ -40,12 +40,25 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    // MediaPipe deps
+    implementation 'com.google.flogger:flogger:latest.release'
+    implementation 'com.google.flogger:flogger-system-backend:latest.release'
+    implementation 'com.google.code.findbugs:jsr305:latest.release'
+    implementation 'com.google.guava:guava:27.0.1-android'
+    implementation 'com.google.protobuf:protobuf-javalite:3.19.1'
 
     // Material Design  -  25.07.2020
     implementation 'com.google.android.material:material:1.4.0'
 
     // CameraX core library  -  13.09.2020
     def camerax_version = "1.1.0-alpha06"
+    implementation "androidx.camera:camera-core:$camerax_version"
+    implementation "androidx.camera:camera-camera2:$camerax_version"
+    implementation "androidx.camera:camera-lifecycle:$camerax_version"
+    // AutoValue
+    def auto_value_version = "1.6.4"
+    implementation "com.google.auto.value:auto-value-annotations:$auto_value_version"
+    annotationProcessor "com.google.auto.value:auto-value:$auto_value_version"
 
     // The following line is optional, as the core library is included indirectly by camera-camera2
     implementation "androidx.camera:camera-core:${camerax_version}"
