--- a/TUM_Lens/app/src/main/AndroidManifest.xml
+++ b/TUM_Lens/app/src/main/AndroidManifest.xml
@@ -59,6 +59,10 @@
             android:theme="@style/AppTheme"
             android:launchMode="singleTask" />
         <activity
+            android:name=".sign.SignLanguageActivity"
+            android:theme="@style/AppTheme"
+            android:launchMode="singleTask"/>
+        <activity
             android:name=".StartScreenActivity"
             android:theme="@style/AppTheme.Launcher">
             <intent-filter>
@@ -67,6 +71,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data android:name="cameraFacingFront" android:value="False"/>
+        <meta-data android:name="binaryGraphName" android:value="sign_translating_gpu.binarypb"/>
+        <meta-data android:name="inputVideoStreamName" android:value="input_video"/>
+        <meta-data android:name="outputVideoStreamName" android:value="output_video"/>
+        <meta-data android:name="flipFramesVertically" android:value="True"/>
+        <meta-data android:name="converterNumBuffers" android:value="3"/>
+
     </application>
 
 </manifest>
