--- a/TUM_Lens/app/build.gradle
+++ b/TUM_Lens/app/build.gradle
@@ -40,6 +40,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1'
+
     // MediaPipe deps
     implementation 'com.google.flogger:flogger:latest.release'
     implementation 'com.google.flogger:flogger-system-backend:latest.release'
